fix box shadow in dark mode

--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,3 +1,7 @@
 .box-shadow {
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
+
+.dark .box-shadow {
+  box-shadow: rgba(50, 50, 50, 0.24) 0px 3px 8px;
+}
